java8 "check device issues" servlet